--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description">
 <meta property="og:type" content="website">
 <meta property="og:title" content="LOVE LINUX">
-<meta property="og:url" content="http://0x00000000.cn/index.html">
+<meta property="og:url" content="http://kingfeng12138/github.io/index.html">
 <meta property="og:site_name" content="LOVE LINUX">
 <meta property="og:description">
 <meta name="twitter:card" content="summary">
